--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1 class="title">Pok&eacute;dex</h1>
     <form action="" class="form">
-      <input id="pokemon__elegido" class="pokemon__elegido" type="text" autocomplete="off">
+      <input id="pokemon__elegido" class="pokemon__elegido" type="text" autocomplete="off" placeholder="charizard">
       <input id="buscar" class="buscar" type="button" value="Buscar">
     </form>
     <main class="pokemon">
