--- a/index.html
+++ b/index.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html>
   <header>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="/images/logo.png" />
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Fetch</title>
   </header>
   <body>
     <h1 class="title">Pok&eacute;dex</h1>
     <form action="" class="form">
-      <input id="pokemon__elegido" class="pokemon__elegido" type="text" autocomplete="off" placeholder="charizard">
-      <input id="buscar" class="buscar" type="button" value="Buscar">
+      <input
+        id="pokemon__elegido"
+        class="pokemon__elegido"
+        type="text"
+        autocomplete="off"
+        placeholder="charizard"
+      />
+      <input id="buscar" class="buscar" type="button" value="Buscar" />
     </form>
     <main class="pokemon">
       <div class="pokemon__list">
         <div class="pokemon__left">
           <h2 id="pokemon__name" class="pokemon__name">Busca un pokemon!</h2>
-          <img id="pokemon__image" class="pokemon__image" src="" alt="">
+          <img id="pokemon__image" class="pokemon__image" src="" alt="" />
         </div>
         <div class="pokemon__right none">
           <h2 class="pokemon__title">Caracteristicas</h2>
