Pokemon height and weight added, features section styles improved

--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <header>
-    <link rel="shortcut icon" href="/images/logo.png" />
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+  <head>
+    <meta charset="UTF-8" />
+    <title>PokeFinder</title>
+    <link
+      rel="icon"
+      href="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Pokebola-pokeball-png-0.png/769px-Pokebola-pokeball-png-0.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Fetch</title>
-  </header>
+  </head>
   <body>
-    <h1 class="title">Pok&eacute;dex</h1>
+    <header class="header">
+      <img class="header__logo" src="./images/logo.png" alt="" />
+      <h1 class="header__title">Pok&eacute;dex</h1>
+    </header>
     <form action="" class="form">
       <input
         id="pokemon__elegido"
@@ -28,8 +34,10 @@
         <div class="pokemon__right none">
           <h2 class="pokemon__title">Caracteristicas</h2>
           <div class="pokemon__features">
-            <p></p>
-            <p></p>
+            <p class="pokemon__feature"></p>
+            <p class="pokemon__feature"></p>
+            <p class="pokemon__feature"></p>
+            <p class="pokemon__feature"></p>
           </div>
         </div>
       </div>
