--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header class="header">
       <img class="header__logo" src="./images/logo.png" alt="" />
-      <h1 class="header__title">Pok&eacute;dex</h1>
+      <h1 class="header__title">PokeFinder</h1>
     </header>
     <form action="" class="form">
       <input
