main section improved and pokemon list section started

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="pokemon__list">
         <div class="pokemon__left">
           <h2 id="pokemon__name" class="pokemon__name">Busca un pokemon!</h2>
-          <img id="pokemon__image" class="pokemon__image" src="" alt="" />
+          <!-- <img id="pokemon__image" class="pokemon__image" src="" alt="pokemon" /> -->
         </div>
         <div class="pokemon__right none">
           <h2 class="pokemon__title">Caracteristicas</h2>
@@ -42,6 +42,22 @@
         </div>
       </div>
     </main>
+
+    <section class="section-list">
+      <div class="section-list__div">
+        <div class="section-list__div-item"></div>
+        <div class="section-list__div-item"></div>
+        <div class="section-list__div-item"></div>
+        <div class="section-list__div-item"></div>
+        <div class="section-list__div-item"></div>
+        <div class="section-list__div-item"></div>
+        <div class="section-list__div-item"></div>
+        <div class="section-list__div-item"></div>
+      </div>
+      <button class="section-list__button">
+        Cargar mas
+      </button>
+    </section>
 
     <script src="index.js"></script>
   </body>
