pokemon list and loadMore button working, color palette change

--- a/index.html
+++ b/index.html
@@ -15,49 +15,54 @@
       <img class="header__logo" src="./images/logo.png" alt="" />
       <h1 class="header__title">PokeFinder</h1>
     </header>
-    <form action="" class="form">
-      <input
-        id="pokemon__elegido"
-        class="pokemon__elegido"
-        type="text"
-        autocomplete="off"
-        placeholder="charizard"
-      />
-      <input id="buscar" class="buscar" type="button" value="Buscar" />
-    </form>
-    <main class="pokemon">
-      <div class="pokemon__list">
-        <div class="pokemon__left">
-          <h2 id="pokemon__name" class="pokemon__name">Busca un pokemon!</h2>
-          <!-- <img id="pokemon__image" class="pokemon__image" src="" alt="pokemon" /> -->
-        </div>
-        <div class="pokemon__right none">
-          <h2 class="pokemon__title">Caracteristicas</h2>
-          <div class="pokemon__features">
-            <p class="pokemon__feature"></p>
-            <p class="pokemon__feature"></p>
-            <p class="pokemon__feature"></p>
-            <p class="pokemon__feature"></p>
+    <div class="wrapper">
+      <form action="" class="form">
+        <input
+          id="pokemon__elegido"
+          class="pokemon__elegido"
+          type="text"
+          autocomplete="off"
+          placeholder="charizard"
+        />
+        <input id="buscar" class="buscar" type="button" value="Buscar" />
+      </form>
+      <main class="pokemon">
+        <div class="pokemon__div">
+          <div class="pokemon__left">
+            <h2 id="pokemon__name" class="pokemon__name">Busca un pokemon!</h2>
+            <!-- <img id="pokemon__image" class="pokemon__image" src="" alt="pokemon" /> -->
+          </div>
+          <div class="pokemon__right none">
+            <h2 class="pokemon__title">Caracteristicas</h2>
+            <div class="pokemon__features">
+              <p class="pokemon__feature"></p>
+              <p class="pokemon__feature"></p>
+              <p class="pokemon__feature"></p>
+              <p class="pokemon__feature"></p>
+            </div>
           </div>
         </div>
-      </div>
-    </main>
-
-    <section class="section-list">
-      <div class="section-list__div">
-        <div class="section-list__div-item"></div>
-        <div class="section-list__div-item"></div>
-        <div class="section-list__div-item"></div>
-        <div class="section-list__div-item"></div>
-        <div class="section-list__div-item"></div>
-        <div class="section-list__div-item"></div>
-        <div class="section-list__div-item"></div>
-        <div class="section-list__div-item"></div>
-      </div>
-      <button class="section-list__button">
-        Cargar mas
-      </button>
-    </section>
+      </main>
+  
+      <section class="section-list">
+        <div class="section-list__div">
+          <!-- <div class="section-list__div-item">
+            <p class="section-list__p">${page.names[i]}</p>
+            <img src="${page.images[i]}" alt="${page.names[i]}">
+          </div> -->
+          <!-- <div class="section-list__div-item"></div>
+          <div class="section-list__div-item"></div>
+          <div class="section-list__div-item"></div>
+          <div class="section-list__div-item"></div>
+          <div class="section-list__div-item"></div>
+          <div class="section-list__div-item"></div>
+          <div class="section-list__div-item"></div> -->
+        </div>
+        <button class="section-list__button">
+          Cargar mas
+        </button>
+      </section>
+    </div>
 
     <script src="index.js"></script>
   </body>
