reduction of the main section size and main loader added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
         <div class="pokemon__div">
           <div class="pokemon__left">
             <h2 id="pokemon__name" class="pokemon__name">Busca un pokemon!</h2>
-            <!-- <img id="pokemon__image" class="pokemon__image" src="" alt="pokemon" /> -->
           </div>
           <div class="pokemon__right hide">
             <h2 class="pokemon__title">Caracteristicas</h2>
@@ -43,6 +42,9 @@
           </div>
         </div>
       </main>
+
+      <div class="div-main-loader">
+      </div>
 
       <section class="section-list">
         <div class="section-list__div">
