type colors section added

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
       <div class="div-main-loader">
       </div>
+      <div class="section-types"></div>
 
       <section class="section-list">
         <div class="section-list__div">
